@@ -1,5 +1,12 @@
 2007-08-15  Diego Escalante Urrelo  <diegoe@gnome.org>
 
+	* embed/downloader-view.c:
+
+	Fix download-icon toolip updates, patch by Cosimo Cecchi.
+	Fixes bug #343238.
+
+2007-08-15  Diego Escalante Urrelo  <diegoe@gnome.org>
+
 	* embed/mozilla/GtkNSSDialogs.cpp:
 
 	Default to Cancel on Cert dialogues, patch by Cosimo Cecchi. 
